# BookMyShow_backend

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py
app/db/: __init__.py  supabase_client.py
app/models/: entities.py  schemas.py
app/repositories/: __init__.py  booking_repository.py  city_repository.py  movie_repository.py  seat_repository.py  show_repository.py  venue_repository.py
app/routers/: admin.py  public.py
app/services/: bookings.py  catalog.py  lock_manager.py  seats.py
