[project]
name = "bookmyshow-backend"
version = "0.1.0"
description = "BookMyShow-style backend (FastAPI) with in-memory seat locking and Supabase-ready persistence."
authors = [{ name = "You" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.5",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.6.4",
  "pydantic-settings>=2.2.1",
  "httpx>=0.27.2",
  "supabase>=2.4.3",
  "python-dotenv>=1.0.1",
  "typing-extensions>=4.12.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.5",
  "ruff>=0.6.9"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

tool.uv = { }  # allows `uv` to manage this project
